# emacs.d

./: .gitignore  .gitmodules  clojure-accents.el  init-evil.el  init-settings.el  init.el  nerdtree-project-explorer.el
iosevka/: IosevkaConfigGen.hs  default.nix  iosevka.cabal  stack.yaml
lisp/: clojure-accents.el  dreame-mode.el  electric-return.el  evil-paredit.el  init-autocomplete.el  init-clojure.el  init-dired-subtree.el  init-dired.el  init-dreame.el  init-emacs-nw.el  init-emacsclient.el  init-eshell.el  init-evil-magit.el  init-evil.el  init-flycheck.el  init-functions.el  init-haskell.el  init-idris.el  init-keybindings.el  init-ligatures.el  init-lisp.el  init-magit.el  init-markdown.el  init-misc.el  init-neotree.el  init-nix.el  init-org.el  init-pixie.el  init-purescript.el  init-racket.el  init-ruby.el  init-rust.el  init-settings.el  init-shen.el  init-terraform.el  init-theme.el  neotree-evil.el  nerdtree-project-explorer.el  ox-reveal.el  speaking-time.el  (+1 more)
